--- a/sbc-customize-page/src/index.html
+++ b/sbc-customize-page/src/index.html
@@ -5,7 +5,7 @@
             <meta http-equiv="X-UA-Compatible" content="IE=edge">
             <meta name="viewport" content="width=device-width, initial-scale=1.0">
             <title>Sole By Cincy | Customize</title>
-            <link href="/dist/output.css" rel="stylesheet">
+            <link href="output.css" rel="stylesheet">
         </head>
         <body>
             <div
@@ -14,7 +14,7 @@
             >
 
 
-                <header>
+                <header class="border-2">
 
                     <h1 id="title">
                         Sole By Cincy
