--- a/sbc-customize-page/src/index.html
+++ b/sbc-customize-page/src/index.html
@@ -6,13 +6,64 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sole By Cincy | CUSTOMIZE</title>
     <link rel="stylesheet" href="../scss/style.css">
+
 </head>
 
 <body>
     <header>
         <h1>Sole By Cincy</h1>
+        <p>CONFIGURATOR</p>
 
     </header>
+
+        <div class="card-box">
+
+            <div class="card">
+                <div class="image-box">
+                    <h3>Option Name</h3>
+                    <p>time-frame</p>
+                </div>
+                <div class="info-box">
+                    <p>a short description of the shoe</p>
+                    <div>
+                        <h4>price</h4>
+                        <button>Select</button>
+                    </div>
+                </div>
+            </div>
+
+            <div class="card">
+                <div class="image-box">
+                    <img src="" alt="">
+                    <h3>Option Name</h3>
+                    <p>time-frame</p>
+                </div>
+                <div class="info-box">
+                    <p>a short description of the shoe</p>
+                    <div>
+                        <h4>price</h4>
+                        <button>Select</button>
+                    </div>
+                </div>
+            </div>
+
+            <div class="card">
+                <div class="image-box">
+                    <img src="" alt="">
+                    <h3>Option Name</h3>
+                    <p>time-frame</p>
+                </div>
+                <div class="info-box">
+                    <p>a short description of the shoe</p>
+                    <div>
+                        <h4>price</h4>
+                        <button>Select</button>
+                    </div>
+                </div>
+            </div>
+
+
+        </div>
     
 </body>
 </html>
