Changed site bg as well as continuing work on card

--- a/sbc-customize-page/src/index.html
+++ b/sbc-customize-page/src/index.html
@@ -10,58 +10,61 @@
 </head>
 
 <body>
-    <header>
-        <h1>Sole By Cincy</h1>
-        <p>CONFIGURATOR</p>
+    <div class="container">
+        <header>
+            <h1>Sole By Cincy</h1>
+            <p>CONFIGURATOR</p>
 
-    </header>
+        </header>
 
-        <div class="card-box">
+            <div class="card-box">
 
-            <div class="card">
-                <div class="image-box">
-                    <h3>Option Name</h3>
-                    <p>time-frame</p>
-                </div>
-                <div class="info-box">
-                    <p>a short description of the shoe</p>
-                    <div>
-                        <h4>price</h4>
-                        <button>Select</button>
+                <div class="card">
+                    <div class="image-box">
+                        <h3>Option Name</h3>
+                        <p>time-frame</p>
+                    </div>
+                    <div class="info-box">
+                        <p>a short description of the shoe</p>
+                        <div>
+                            <h4>price</h4>
+                            <button>Select</button>
+                        </div>
                     </div>
                 </div>
-            </div>
 
-            <div class="card">
-                <div class="image-box">
-                    <h3>Option Name</h3>
-                    <p>time-frame</p>
-                </div>
-                <div class="info-box">
-                    <p>a short description of the shoe</p>
-                    <div>
-                        <h4>price</h4>
-                        <button>Select</button>
+                <div class="card">
+                    <div class="image-box">
+                        <h3>Option Name</h3>
+                        <p>time-frame</p>
+                    </div>
+                    <div class="info-box">
+                        <p>a short description of the shoe</p>
+                        <div>
+                            <h4>price</h4>
+                            <button>Select</button>
+                        </div>
                     </div>
                 </div>
-            </div>
 
-            <div class="card">
-                <div class="image-box">
-                    <h3>Option Name</h3>
-                    <p>time-frame</p>
-                </div>
-                <div class="info-box">
-                    <p>a short description of the shoe</p>
-                    <div>
-                        <h4>price</h4>
-                        <button>Select</button>
+                <div class="card">
+                    <div class="image-box">
+                        <h3>Option Name</h3>
+                        <p>time-frame</p>
+                    </div>
+                    <div class="info-box">
+                        <p>a short description of the shoe</p>
+                        <div>
+                            <h4>price</h4>
+                            <button>Select</button>
+                        </div>
                     </div>
                 </div>
+
+
             </div>
-
-
-        </div>
     
+    </div>
+
 </body>
 </html>
