Started work on responsive site navbar

--- a/sbc-customize-page/src/index.html
+++ b/sbc-customize-page/src/index.html
@@ -12,10 +12,31 @@
 <body>
     <div class="container">
         <header>
-            <h1>Sole By Cincy</h1>
-            <p>CONFIGURATOR</p>
+            <h2>Sole By <span>Cincy</span></h2>
+            <div class="nav">
+                <ul>
+                    <li><a href="#">About</a></li>
+                    <li><a href="#">Social</a></li>
+                    <li><a href="#">Shop</a></li>
+                    <li><a href="#">Customize</a></li>
+                </ul>
+            </div>
+
+            <div class="nav2">
+                <ul>
+                    <li><a href="#"></a><img src="../images/shopping-cart.png" alt="cart"></li>
+                    <li><a href="#"><img src="../images/user.png" alt="user"></a></li>
+                </ul>
+
+            </div>
+            
+            <button class="hamburger">
+                <div class="bar"></div>
+            </button>
 
         </header>
+
+        <div class="nav"></div>
 
             <div class="card-box">
 
