--- a/sbc-customize-page/src/index.html
+++ b/sbc-customize-page/src/index.html
@@ -55,7 +55,7 @@
                         <p>a short description of the shoe</p>
                         <div>
                             <h4>price</h4>
-                            <button>Select</button>
+                            <button onclick="twoColorToggle()">Select</button>
                         </div>
                     </div>
                 </div>
@@ -69,7 +69,7 @@
                         <p>a short description of the shoe</p>
                         <div>
                             <h4>price</h4>
-                            <button>Select</button>
+                            <button onclick="threeColorToggle()">Select</button>
                         </div>
                     </div>
                 </div>
@@ -83,9 +83,27 @@
                         <p>a short description of the shoe</p>
                         <div>
                             <h4>price</h4>
-                            <button>Select</button>
+                            <button onclick="customConfigToggle()">Select</button>
                         </div>
                     </div>
+                </div>
+
+
+            </div>
+
+            <div class="form-box">
+
+                <div id="two-color" class="form hidden">
+                    <h1>Two Color</h1>
+
+                </div >
+
+                <div id="three-color" class="form hidden">
+                    <h1>Three Color</h1>
+                </div>
+
+                <div id="custom-config" class="form hidden">
+                    <h1>Custom Config</h1>
                 </div>
 
 
@@ -94,5 +112,7 @@
     
     </div>
 
+
+<script src="./index.js" type="text/javascript"></script>
 </body>
 </html>
