Started work on form box

--- a/sbc-customize-page/src/index.html
+++ b/sbc-customize-page/src/index.html
@@ -93,8 +93,21 @@
 
             <div class="form-box">
 
-                <div id="two-color" class="form hidden">
-                    <h1>Two Color</h1>
+                <div id="two-color" class="form">
+                    <div class="selection-box options">
+                        <h1>Options Configurator</h1>
+                        <div class="primary-color">
+                            <h2>Primary Color</h2>
+                            <button>Select</button>
+                        </div>
+                    </div>
+
+                    <div class="arrow-box">
+                    </div>
+
+                    <div class="selection-box config">
+                        <h1>no</h1>
+                    </div>
 
                 </div >
 
